--- a/public/main/rightsidecheck.tmpl.html
+++ b/public/main/rightsidecheck.tmpl.html
@@ -25,19 +25,13 @@
     </div>
 </div>
 
+
+
+
 <div class="desc">
-    <div class="details">
-        <button type="button" class="btn btn-theme02" ng-click="main.applyCheck()">
-            <i class="fa fa-check"></i>
-            Оформить
-        </button>
-    </div>
+    <h3 id="my2" ng-click="main.applyCheck()">Оформить</h3>
 </div>
 
 <div class="desc">
-    <div class="details">
-        <button type="button" class="btn btn-theme04" ng-click="main.resetCheck()">
-            Отмена
-        </button>
-    </div>
+    <h3  ng-click="main.resetCheck()">Отмена</h3>
 </div>
