--- a/public/admin/adddrink.tmpl.html
+++ b/public/admin/adddrink.tmpl.html
@@ -1,4 +1,4 @@
-<h3>Описание напитка</h3>
+<h3>Описание</h3>
 <label class="col-sm-2 col-sm-2 control-label">Название</label>
 
 <div class="col-sm-10">
@@ -13,7 +13,7 @@
 <button type="button" class="btn btn-theme02" ng-click="main.addCurDrinkToDB()"><i class="fa fa-check"></i>Добавить в Базу
 </button>
 <button type="button" class="btn btn-theme03" ng-click="main.useIngridients()">Ингридиенты</button>
-<button type="button" class="btn btn-theme03 pull-right" ng-click="main.deleteCurDrinkFromDB()">Удалить напиток из Базы</button>
+<button type="button" class="btn btn-theme04 pull-right" ng-click="main.deleteCurDrinkFromDB()">Удалить из Базы</button>
 
 
 
