--- a/public/admin/adddrink.tmpl.html
+++ b/public/admin/adddrink.tmpl.html
@@ -1,4 +1,4 @@
-<h3>Описание</h3>
+<h3>Описание продукта</h3>
 <label class="col-sm-2 col-sm-2 control-label">Название</label>
 
 <div class="col-sm-10">
