--- a/public/admin/addingridient.tmpl.html
+++ b/public/admin/addingridient.tmpl.html
@@ -1,4 +1,4 @@
-<h3>Ингридиенты</h3>
+<h3>Ингридиенты продукта</h3>
 
 <ul class="form-panel" ng-repeat="ingr in main.curdrink.ingredients">
     <li>{{ingr.name}} {{ingr.count}}  {{ingr.mass}}</li>
@@ -6,17 +6,22 @@
 
 <label class="col-sm-2 col-sm-2 control-label">Название</label>
 <div class="col-sm-10">
-    <input type="text" class="form-control" ng-model="main.ingridient.name">
+    <input type="text"
+
+           class="form-control"
+           ng-model="main.ingridient.name"
+           placeholder="{{main.ingridient.name}}"
+           disabled>
 </div>
 
-<label class="col-sm-2 col-sm-2 control-label">Единицы (g/ml)</label>
+<label class="col-sm-2 col-sm-2 control-label">Единицы</label>
 <div class="col-sm-10">
-    <select class="form-control" ng-model="main.ingridient.mass">
-        <option>g</option>
-        <option>ml</option>
-        <option>cup</option>
-        <option>pice</option>
-    </select>
+    <input type="text"
+
+           class="form-control"
+           ng-model="main.ingridient.mass"
+           placeholder="{{main.ingridient.mass}}"
+           disabled>
 </div>
 
 
@@ -25,11 +30,12 @@
     <input type="text" class="form-control" ng-model="main.ingridient.count">
 </div>
 
-
-<button type="button" class="btn btn-theme02" ng-click="main.addIngridientToDrink()">
+<p>.</p>
+<button type="button" class="btn btn-theme02" ng-click="main.addIngridientToDrink()" ng-if="main.ingridient.name">
     <i class="fa fa-check"></i>
     Добавить к напитку
 </button>
+
 
 
 
