есть учет денег

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -53,7 +53,7 @@
     *********************************************************************************************************************************************************** -->
     <!--sidebar start-->
     <aside>
-        <div leftmainsidebarmenu id="sidebar" class="nav-collapse ">
+        <div leftmainsidebarmenu id="sidebar" class="nav-collapse">
         </div>
     </aside>
     <!--sidebar end-->
@@ -66,6 +66,9 @@
         <section class="wrapper">
             <div class="row mt">
                 <div class="col-lg-12">
+
+                    <div moneyworking class="form-panel" ng-if="main.moneyinuse">
+                    </div>
 
                     <div inform class="form-panel">
                     </div>
