--- a/public/admin/topbarcontent.tmpl.html
+++ b/public/admin/topbarcontent.tmpl.html
@@ -18,11 +18,11 @@
 
 <div class="top-menu">
     <ul class="nav pull-right top-menu">
-        <li><a class="logout" href="#" ng-click="main.needNewGroup()">Создать новую группу</a></li>
+        <li><a class="logout" href="#" ng-click="main.needNewGroup()">Новая группа</a></li>
     </ul>
 </div>
 <div class="top-menu">
     <ul class="nav pull-right top-menu">
-        <li><a class="logout" href="#" ng-click="main.needNewIngngridientForDB()">Создать новый ингридиент</a></li>
+        <li><a class="logout" href="#" ng-click="main.needNewIngngridientForDB()">Новый ингридиент</a></li>
     </ul>
 </div>
