--- a/public/main/index.html
+++ b/public/main/index.html
@@ -72,8 +72,7 @@
       *********************************************************************************************************************************************************** -->
       <!--sidebar start-->
       <aside>
-          <div ulsidebarmainmenu id="sidebar"  class="nav-collapse ">
-
+          <div ulsidebarmainmenu id="sidebar"  class="nav-collapse">
           </div>
       </aside>
       <!--sidebar end-->
@@ -105,7 +104,7 @@
       <!--footer start-->
       <footer class="site-footer">
           <div class="text-center">
-              2014 - Alvarez.is
+              Денег в кассе: {{main.curmoney}}
               <a href="index.html#" class="go-top">
                   <i class="fa fa-angle-up"></i>
               </a>
