--- a/public/admin/leftmainsidebarmenu.tmpl.html
+++ b/public/admin/leftmainsidebarmenu.tmpl.html
@@ -2,7 +2,7 @@
 <ul class="sidebar-menu" id="nav-accordion">
 
     <p class="centered">
-        <a href="profile.html">
+        <a href="#" ng-click="main.useMoney()">
             <img src="../assets/img/ui-sam.jpg"
                  class="img-circle"
                  width="60">
