теперь параметры конфигурации можно добавлять и менять через вебморду

--- a/public/admin/moneyworking.tmpl.html
+++ b/public/admin/moneyworking.tmpl.html
@@ -6,6 +6,10 @@
 <div class="col-sm-10">
     <input type="text" class="form-control" ng-model="main.money.count">
 </div>
+<label class="col-sm-2 col-sm-2 control-label">Причина</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" ng-model="main.money.reason">
+</div>
 
 <p>.</p>
 
