--- a/public/config/inform.tmpl.html
+++ b/public/config/inform.tmpl.html
@@ -1,1 +1,3 @@
 <h3>Страница работы с параметрами конфигурации</h3>
+
+<button type="button" class="btn btn-theme03" ng-click="main.senMessageByEmail()">Послать тестовое письмо</button>
