теперь можно сделать полный бэкап базы из веб морды добавил перекрестные ссылки, чтобы переходить со страницы на страницу

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -101,10 +101,15 @@
     <!--footer start-->
     <footer class="site-footer">
         <div class="text-center">
-            2014 - Alvarez.is
+
+            <a href="/config">
+                Go To Config
+            </a>
+
             <a href="index.html#" class="go-top">
                 <i class="fa fa-angle-up"></i>
             </a>
+
         </div>
     </footer>
     <!--footer end-->
