--- a/public/config/index.html
+++ b/public/config/index.html
@@ -86,10 +86,15 @@
     <!--footer start-->
     <footer class="site-footer">
         <div class="text-center">
-            Bubble Maker
+
+            <a href="/admin">
+                Go To Admin
+            </a>
+
             <a href="index.html#" class="go-top">
                 <i class="fa fa-angle-up"></i>
             </a>
+
         </div>
     </footer>
     <!--footer end-->
