--- a/public/main/index.html
+++ b/public/main/index.html
@@ -104,7 +104,10 @@
       <!--footer start-->
       <footer class="site-footer">
           <div class="text-center">
-              Денег в кассе: {{main.curmoney}}
+              <a href="/admin">
+                  Денег в кассе: {{main.curmoney}}
+              </a>
+
               <a href="index.html#" class="go-top">
                   <i class="fa fa-angle-up"></i>
               </a>
