--- a/public/admin/topbarcontent.tmpl.html
+++ b/public/admin/topbarcontent.tmpl.html
@@ -2,7 +2,7 @@
     <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
 </div>
 <!--logo start-->
-<a href="#" class="logo"><b>{{main.title}}</b></a>
+<a href="/main" class="logo"><b>{{main.title}}</b></a>
 <!--logo end-->
 <div class="nav notify-row" id="top_menu">
     <!--  notification start -->
