--- a/public/config/inform.tmpl.html
+++ b/public/config/inform.tmpl.html
@@ -1,3 +1,4 @@
 <h3>Страница работы с параметрами конфигурации</h3>
 
 <button type="button" class="btn btn-theme03" ng-click="main.senMessageByEmail()">Послать тестовое письмо</button>
+<button type="button" class="btn btn-theme03" ng-click="main.senFullBackupByEmail()">Послать полный бэкап на почту</button>
