--- a/public/config/backupactions.tmpl.html
+++ b/public/config/backupactions.tmpl.html
@@ -2,3 +2,25 @@
 
 <button type="button" class="btn btn-theme03" ng-click="main.senMessageByEmail()">Послать тестовое письмо</button>
 <button type="button" class="btn btn-theme03" ng-click="main.senFullBackupByEmail()">Послать полный бэкап на почту</button>
+<button type="button" class="btn btn-theme03" ng-click="main.askFullListOfBackupsFromServer()">Запросить список бэкапов</button>
+
+<table class="table table-striped table-advance table-hover" ng-if="main.backuplist">
+    <hr>
+    <thead>
+    <tr>
+        <th>Название</th>
+        <th>Размер</th>
+        <th>Операции</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="param in main.backuplist">
+        <td>{{param}}</td>
+        <td>-</td>
+        <td>
+            <button class="btn btn-primary btn-xs" ng-click="main.deleteBackup(param)"><i class="fa fa-trash-o "></i></button>
+        </td>
+    </tr>
+
+    </tbody>
+</table>
