--- a/public/admin/addnewingridienttodb.tmpl.html
+++ b/public/admin/addnewingridienttodb.tmpl.html
@@ -18,6 +18,11 @@
     <input type="text" class="form-control" ng-model="main.ingridientnewfordb.count">
 </div>
 
+<label class="col-sm-2 col-sm-2 control-label">Минимум для оповещения</label>
+<div class="col-sm-10">
+    <input type="text" class="form-control" ng-model="main.ingridientnewfordb.limit">
+</div>
+
 <p>.</p>
 <button type="button" class="btn btn-theme02" ng-click="main.addNewIngngridientToDB()">
     <i class="fa fa-check"></i>
