--- a/public/reports/index.html
+++ b/public/reports/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="appforindex">
+<html lang="en" ng-app="reporter">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <meta name="author" content="Dashboard">
     <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
 
-    <title>Title</title>
+    <title>Reporter</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
 
-    <script src="appforindex.js"></script>
+    <script src="reporter.js"></script>
 
 </head>
 
@@ -58,26 +58,31 @@
     </aside>
     <!--sidebar end-->
 
-    <!-- **********************************************************************************************************************************************************
-    MAIN CONTENT
-    *********************************************************************************************************************************************************** -->
+    <!-- ************************************************************************************************************ -->
+    <!-- MAIN CONTENT
+    <!-- ************************************************************************************************************ -->
     <!--main content start-->
     <section id="main-content">
         <section class="wrapper">
             <div class="row mt">
-                <div class="col-lg-12">
+                <div class="col-lg-9">
 
 
-                    <div inform class="form-panel">
-                    </div>
-
-                    <div workform class="form-panel">
-                    </div>
-
-
+                    <div inform class="form-panel"></div>
+                    <div reporttable class="form-panel" ng-if="main.table"></div>
+                    <div checkreportlist class="form-panel" ng-if="main.checkreportlist"></div>
+                    <div kassareportlist class="form-panel" ng-if="main.kassareportlist"></div>
 
 
                 </div>
+
+                <!-- ********************************************************************************** -->
+                <!-- RIGHT SIDEBAR CONTENT -->
+                <!-- *********************************************************************************** -->
+
+                <div rightsidecheckdetaled class="col-lg-3 ds" ng-if="main.checkdetaled"></div>
+                <!-- /col-lg-3 -->
+
             </div>
             <! --/row -->
         </section>
@@ -87,7 +92,9 @@
     <!--footer start-->
     <footer class="site-footer">
         <div class="text-center">
-            2014 - Alvarez.is
+            <a href="/admin">
+                Go To Admin
+            </a>
             <a href="index.html#" class="go-top">
                 <i class="fa fa-angle-up"></i>
             </a>
@@ -95,14 +102,6 @@
     </footer>
     <!--footer end-->
 </section>
-
-
-
-
-
-
-
-
 
 
 <!-- js placed at the end of the document so the pages load faster -->
