--- a/public/admin/addingridient.tmpl.html
+++ b/public/admin/addingridient.tmpl.html
@@ -27,7 +27,7 @@
 
 <label class="col-sm-2 col-sm-2 control-label">Количество</label>
 <div class="col-sm-10">
-    <input type="text" class="form-control" ng-model="main.ingridient.count">
+    <input type="number" min="1" step="1" class="form-control" ng-model="main.ingridient.count">
 </div>
 
 <p>.</p>
