--- a/public/admin/addnewingridienttodb.tmpl.html
+++ b/public/admin/addnewingridienttodb.tmpl.html
@@ -15,12 +15,12 @@
 
 <label class="col-sm-2 col-sm-2 control-label">Количество</label>
 <div class="col-sm-10">
-    <input type="text" class="form-control" ng-model="main.ingridientnewfordb.count">
+    <input type="number" min="1" step="1" class="form-control" ng-model="main.ingridientnewfordb.count">
 </div>
 
 <label class="col-sm-2 col-sm-2 control-label">Минимум для оповещения</label>
 <div class="col-sm-10">
-    <input type="text" class="form-control" ng-model="main.ingridientnewfordb.limit">
+    <input type="number" min="1" step="1" class="form-control" ng-model="main.ingridientnewfordb.limit">
 </div>
 
 <p>.</p>
