исправил левое меню для отчетов изменил "напитки" на "продукты", ибо учитывать можно что угодно вроде как сделал удаление групп

--- a/public/admin/addingridient.tmpl.html
+++ b/public/admin/addingridient.tmpl.html
@@ -33,7 +33,7 @@
 <p>.</p>
 <button type="button" class="btn btn-theme02" ng-click="main.addIngridientToDrink()" ng-if="main.ingridient.name">
     <i class="fa fa-check"></i>
-    Добавить к напитку
+    Добавить
 </button>
 
 
