--- a/public/admin/inform.tmpl.html
+++ b/public/admin/inform.tmpl.html
@@ -1,1 +1,5 @@
-<h3>Добавляем {{main.curgroup.name}}</h3>
+
+<button class=" pull-right btn btn-danger btn-xs " ng-click='main.deleteCurGroupFromDB()'>
+    <i class="fa fa-trash-o"></i>
+</button>
+<h3>Добавляем элемент в группу {{main.curgroup.name}}</h3>
