--- a/public/reports/index.html
+++ b/public/reports/index.html
@@ -44,7 +44,12 @@
     TOP BAR CONTENT & NOTIFICATIONS
     *********************************************************************************************************************************************************** -->
     <!--header start-->
-    <header topbarcontent class="header black-bg">
+    <header class="header black-bg">
+        <div class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+        </div>
+        <div topbarcontent></div>
+
     </header>
     <!--header end-->
 
@@ -53,7 +58,48 @@
     *********************************************************************************************************************************************************** -->
     <!--sidebar start-->
     <aside>
-        <div leftmainsidebarmenu id="sidebar" class="nav-collapse">
+        <div id="sidebar" class="nav-collapse">
+
+            <ul class="sidebar-menu" id="nav-accordion">
+
+                <p class="centered">
+                    <a href="#" ng-click="main.useMoney()">
+                        <img src="../assets/img/ui-sam.jpg"
+                             class="img-circle"
+                             width="60">
+                    </a>
+                </p>
+                <h5 class="centered">Готовые отчеты</h5>
+
+                <li class="sub-menu dcjq-parent-li">
+                    <a href="javascript:;" >
+                        <i class="fa fa-tasks"></i>
+                        <span>Чеки</span>
+                    </a>
+                    <ul class="sub">
+                        <li ng-click="main.reportChecks()"><a href="#">За все время</a></li>
+                        <li><a href="#">За день</a></li>
+                        <li><a href="#">За неделю</a></li>
+                        <li><a href="#">За месяц</a></li>
+                    </ul>
+                </li>
+
+
+                <li class="sub-menu dcjq-parent-li">
+
+                    <a href="javascript:;">
+                        <i class="fa fa-tasks"></i>
+                        <span>Выписка по кассе</span>
+                    </a>
+
+                    <ul class="sub">
+                        <li ng-click="main.reportKassa()"><a href="#">Полный очет</a></li>
+                        <li><a href="#">Ручные операции</a></li>
+                    </ul>
+                </li>
+
+
+            </ul>
         </div>
     </aside>
     <!--sidebar end-->
