--- a/public/config/index.html
+++ b/public/config/index.html
@@ -44,7 +44,15 @@
     TOP BAR CONTENT & NOTIFICATIONS
     *********************************************************************************************************************************************************** -->
     <!--header start-->
-    <header topbarcontent class="header black-bg">
+    <header class="header black-bg">
+        <div class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+        </div>
+        <!--logo start-->
+        <a href="/main" class="logo"><b>{{main.title}}</b></a>
+        <div topbarcontent>
+
+        </div>
     </header>
     <!--header end-->
 
